--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sudo-prompt",
+  "name": "sudo-prompt-alt",
   "version": "9.2.1",
   "description": "Run a command using sudo, prompting the user with an OS dialog if necessary",
   "main": "index.js",
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jorangreef/sudo-prompt.git"
+    "url": "git@github.com:electron-modules/sudo-prompt-alt.git"
   },
   "keywords": [
     "sudo",
@@ -31,11 +31,6 @@
     "elevate",
     "run as administrator"
   ],
-  "author": "Joran Dirk Greef",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jorangreef/sudo-prompt/issues"
-  },
-  "homepage": "https://github.com/jorangreef/sudo-prompt#readme",
   "scripts": {}
 }
